# sorting-benchmark

./: .gitignore  CMakeLists.txt  README.md  runtime.sh
data/: output.txt
src/: InsertionSort.cpp  InsertionSort.h  MergeSort.cpp  MergeSort.h  QuickSort.cpp  QuickSort.h  SortingBase.cpp  SortingBase.h  globals.h  main.cpp
